# insurance-extraction-service-prod-v2

./: .env.example  .gitignore  Commit_Changes_Summary.md  INSURANCE_DOCUMENT_PIPELINE.md  Insurance_Processing_Workflow_Detailed_Analysis.md  US_commercial_proposal_schema.json  US_personal_policy_schema.json  US_personal_proposal_schema.json  anomalies_14.json  canada_lobs.json  commercial_proposal_schema.json  extracted_json.json  process_insurance_documents_commercial_input.json  pyproject.toml  responses.json  start.py  test.py  us_lobs.json
app/: config.py  logging_config.py  main.py
app/insurance_policy_processor/coverage_detail_mapper/: mapper.py
app/insurance_policy_processor/coverage_mapper/: mapper.py
app/insurance_policy_processor/lob_indentifier/: lob_indentifier.py
app/insurance_policy_processor/policy_data_extractor/: policy_direct_field_extractor.py  policy_extractor.py  policy_list_extractor.py  policy_object_extractor.py
app/insurance_policy_processor/policy_document_handler/: policy_file_manager.py  policy_metadata_extractor.py  policy_page_extractor.py  policy_pdf_converter.py
app/insurance_policy_processor/policy_orchestrator/: enums.py  enums_new.py
app/insurance_policy_processor/processing_cost_calculator/: metrics_calculator.py  (+1 more)
app/modules/: async_redis.py  gemini_processor.py
app/policy_tools/: carrier_recommendation.py  commercial_comparison.py  policy_data_flattener.py
app/routes/: insurance_commercial.py  router.py  test.py
app/utils/: core.py  error_utils.py  helpers.py  logger_factory.py  logging_config.py
(+7 files in other folders)
